# Davinci-Resolve

./: .gitignore  Install_Kinetic_Captions.bat  README.md  Uninstall_Kinetic_Captions.bat  generate_words.bat  install_whisper_model.bat  pyproject.toml  run_resolve_pipeline.bat
docs/: CHECKLIST_STATUS.md  DISTRIBUTION.md  FUSION_TITLE_PLAN.md  QA_CHECKLIST.md
fusion/Scripts/Comp/: KineticCaptionsRuntime.lua
fusion/Templates/Edit/Titles/: Kinetic Captions.setting
installer/: install_wizard.py  uninstall_wizard.py
installer/inno/: KineticCaptionsSetup.iss
resolve/: __init__.py  auto_kinetic_captions.py
samples/: sample.ass  sample.srt  sample_transcript.txt  sample_words.json
scripts/: build_drfx.py  build_windows_bundle.py  package_release.py
src/kinetic_captions/: __init__.py  caption_engine.py  cli.py  diarization.py  model_manager.py  source_import.py  text_norm.py  transcription.py  validation.py
tests/: test_caption_engine.py  test_diarization.py  test_model_manager.py  test_resolve_pipeline.py  test_source_import.py  test_text_norm.py  test_validation.py
